--- a/Server/package.json
+++ b/Server/package.json
@@ -17,6 +17,7 @@
     "express-async-handler": "^1.2.0",
     "express-oauth2-jwt-bearer": "^1.6.0",
     "nodemon": "^3.0.2",
-    "prisma": "^5.8.0"
+    "prisma": "^5.8.0",
+    "react-router-dom": "^6.23.0"
   }
 }
