--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "dependencies": {
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
+    "esri-leaflet-geocoder": "2.3.3",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
+    "react-leaflet": "4.2.1",
     "react-query": "^3.39.3",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5"
